# EdgeAI---Lightweight-C-Machine-Learning-Library-for-Raspberry-Pi-5

./: CMakeLists.txt  LICENSE  README.md  code_analysis.md  simulation_test.cpp  test_manual.cpp  validate_code.cpp
examples/: face_lock.cpp  iris_demo.cpp
python/: CMakeLists.txt  edge_ai_wrapper.cpp
src/include/: model_base.cpp  model_base.h
src/ml/: cnn.cpp  cnn.h  decision_tree.cpp  decision_tree.h  knn.cpp  knn.h  logistic_regression.cpp  logistic_regression.h
src/utils/: model_factory.cpp  model_factory.h  quantization.cpp  quantization.h
tests/: test_algorithms.cpp
